--- a/flightweb/src/main/resources/application.properties
+++ b/flightweb/src/main/resources/application.properties
@@ -3,3 +3,29 @@ multipart.maxRequestSize: 40960MB
 logging.level.org.springframework.web: INFO
 spring.thymeleaf.cache: false
 server.address: 0.0.0.0
+
+# DataSource settings: set here your own configurations for the database
+# connection. In this example we have "flightweb" as database name and
+# "root" as username and password.
+spring.datasource.url = jdbc:mysql://localhost:3306/flightweb
+spring.datasource.username = flightweb
+spring.datasource.password = flightweb
+
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
+# stripped before adding them to the entity manager)
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
